--- a/css/style.css
+++ b/css/style.css
@@ -4,25 +4,25 @@ body {
 
 h1 {
     color: #38260B;
-    font-family: "Montserrat";
+    font-family: Montserrat, sans-serif;
     font-size: 50px;
 }
 
 h2 {
     color: #38260B;
-    font-family: "Montserrat";
+    font-family: Montserrat, sans-serif;
     font-size: 40px;
 }
 
 p {
     color: #38260B;
-    font-family: "Montserrat";
+    font-family: Montserrat, sans-serif;
     font-size: 26px;
 }
 
 h6 {
     color: #FFFEFD;
-    font-family: "Montserrat";
+    font-family: Montserrat, sans-serif;
     font-size: 24px;
 }
 
@@ -31,6 +31,63 @@ h6 {
     vertical-align: top;
 }
 
+
+
+
+
+.nav {
+    width: 100%;
+    height: 65px;
+    position: fixed;
+    line-height: 65px;
+    text-align: center;
+}
+
+.nav div.logo {
+    float: left;
+    width: auto;
+    height: auto;
+    padding-left: 3rem;
+}
+
+
+.nav div.main_list {
+    height: 65px;
+    float: right;
+}
+
+.nav div.main_list ul {
+    width: 100%;
+    height: 65px;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav div.main_list ul li {
+    width: auto;
+    height: 65px;
+    padding: 0;
+    padding-right: 3rem;
+}
+
+.nav div.main_list ul li a {
+    text-decoration: none;
+    color: #ae988d;
+    line-height: 65px;
+    font-size: 2.4rem;
+}
+
+.nav div.main_list ul li a:hover {
+    color: #884a3f;
+}
+
+
+
+
+
+ /*
 .logo {
     width: 23%;
     padding: 1%;
@@ -45,7 +102,7 @@ nav {
 ul {
     width: 50%;
     margin-left: auto;
-}
+}   */
 
 .heroImg {
     height: 600px;
